--- a/ui/css/evothings-app.css
+++ b/ui/css/evothings-app.css
@@ -1,19 +1,22 @@
 /* Common styles for Evothings examples and client. */
 
 @import '../fonts/Gotham.css';
+@import '../fonts/Roboto.css';
 
 :root {
 	--redorange: #DB5A4A;
+	font-size: 12px;
 }
 
 .redorange {
 	color: var(--redorange) !important;
 }
 
-*{
+* {
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
+	color: #fff;
 }
 
 html,
@@ -41,9 +44,12 @@ body {
 	background-color: #000;
 }
 
+.white-bg{
+	background-color: #fff;
+}
+
 /* Add a top margin to the content corresponding to the height of the header. */
-body::before,
-section::before {
+body::before {
 	display: block;
 	width: 100%;
 	height: 1.1em;
@@ -72,6 +78,24 @@ section::after {
 
 .hidden {
 	display: none;
+}
+
+.btn {
+	width: 100%;
+	background-color: var(--redorange);
+	color: #fff;
+	text-transform: uppercase;
+	text-align: center;
+	border-radius: 20px;
+	padding: 5px;
+}
+
+.btn p {
+	margin: auto;
+}
+
+a {
+	text-decoration: none;
 }
 
 /*  ----------------------------------------------------------
@@ -276,9 +300,22 @@ header h1 {
 
 h1 {
 	text-align: right;
-	font-size: 20px;
 	color: #fff;
 	margin-bottom: 15px;
+	font-size: 1.4em;
+}
+
+h2 {
+	font-size: .8em;
+}
+
+h3 {
+	font-size: .6em;
+}
+
+p {
+	font-size: .5em;
+	font-family: 'Roboto Regular', sans-serif;
 }
 
 .carousel {
@@ -288,38 +325,197 @@ h1 {
 }
 
 .carousel figure {
-	width: 25%;
-	height: 200px;
+	width: 60%;
+	margin-left: 5%;
 }
 
 .carousel figure img {
 	width: 100%;
+	height: 75px;
+	border-radius: 5%;
+	object-fit: cover;
 }
 
-#generate-route img{
+#generate-route img {
 	width: 80%;
 	padding: 15%;
 }
 
-#generate-route-opt{
+#generate-route-opt {
 	background-color: #fff;
 	border-radius: 20px;
 	text-align: center;
 }
 
-#generate-route-opt :nth-child(2){
+/* #generate-route-opt :nth-child(2){
 	border-top: 3px dashed #000;
-}
+} */
 
-#generate-route-opt{
+#generate-route-opt {
 	font-size: 14px;
 }
 
-#generate-route-opt div p{
-	padding-bottom: 5%;
+#generate-route-opt div {
+	width: 70%;
+	margin: auto;
 }
 
-#generate-route-opt div h2{
+#generate-route-opt div p {
+	padding-bottom: 5%;
+	font-size: 1em;
+}
+
+#generate-route-opt div p,
+#generate-route-opt div h2 {
+	color: #000;
+}
+
+#generate-route-opt div h2 {
 	text-transform: uppercase;
 	padding-top: 5%;
+	font-size: 1.2em;
 }
+
+button {
+	border: none;
+	background: none;
+}
+
+/*  ----------------------------------------------------------
+								ROUTE INF PAGE
+	---------------------------------------------------------- */
+
+#route-inf {
+	width: 100%;
+}
+
+#route-inf img {
+	width: 100%;
+	border-radius: 5%;
+	max-height: 100px;
+	object-fit: cover;
+}
+
+#route-inf div {
+	width: 100%;
+	display: flex;
+}
+
+#route-inf :nth-child(3) {
+	margin-top: 5%;
+}
+
+#route-inf :nth-child(4) {
+	margin-bottom: 10%;
+}
+
+#route-inf div :first-child {
+	font-family: 'Gotham Medium', sans-serif;
+	text-transform: uppercase;
+}
+
+#route-inf div :nth-child(2) {
+	margin-left: 10px;
+}
+
+#route-inf div img {
+	width: 40%;
+}
+
+#route-gallery {
+	width: 100%;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	background-color: #fff;
+}
+
+#route-gallery img {
+	width: 28%;
+	border-radius: 5%;
+	margin-top: 5%;
+}
+
+#goto {
+	background-color: #fff;
+	border-radius: 100%;
+	padding: 18% 0 10% 0;
+}
+
+#goto p {
+	width: 100%;
+	color: #000;
+	text-align: center;
+	text-transform: uppercase;
+	font-weight: 1000;
+	font-size: .6em;
+}
+
+.xl {
+	font-size: 2.5em !important;
+}
+
+/*  ----------------------------------------------------------
+								FEEDBACK PAGE
+	---------------------------------------------------------- */
+
+#feedback p, #feedback div p{
+	font-family: 'Gotham Medium', sans-serif;
+	width: 100%;
+	text-align: center;
+	text-transform: none;
+}
+
+#feedback :nth-child(2){
+	text-transform: uppercase;
+}
+
+#feedback p, #feedback div p, #feedback h1{
+	color: #000;
+}
+
+#feedback div {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+}
+
+#feedback div #like,
+#feedback div #dislike {
+	padding: 5%;
+	width: 30%;
+}
+
+#feedback div #like img,
+#feedback div #dislike img {
+	width: 100%;
+}
+
+#feedback :nth-child(8) img{
+	width: 20%;
+}
+
+/*  ----------------------------------------------------------
+								FEEDBACK PAGE
+	---------------------------------------------------------- */
+
+#instructions li{
+	display: flex;
+	flex-wrap: wrap;	
+}
+
+#instructions li p{
+	width: 70% !important;
+	margin-top: 7%;	
+}
+
+#instructions .xl{
+		font-size: 4em !important;
+		font-weight: bolder;
+		width: 30%;
+	}
+
+	ul li{
+		list-style: none;
+	}
