--- a/ui/fonts/Gotham.css
+++ b/ui/fonts/Gotham.css
@@ -1,4 +1,26 @@
 @font-face {
+	font-family: 'Gotham Light';
+	src: url('Gotham-Light.otf');
+	/* src: url('ProximaNova-Reg-webfont.eot?#iefix') format('embedded-opentype'),
+		 url('ProximaNova-Reg-webfont.woff') format('woff'),
+		 url('ProximaNova-Reg-webfont.ttf') format('truetype'),
+		 url('ProximaNova-Reg-webfont.svg#proxima_nova_rgregular') format('svg'); */
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Gotham Book';
+	src: url('Gotham-Book.otf');
+	/* src: url('ProximaNova-Reg-webfont.eot?#iefix') format('embedded-opentype'),
+		 url('ProximaNova-Reg-webfont.woff') format('woff'),
+		 url('ProximaNova-Reg-webfont.ttf') format('truetype'),
+		 url('ProximaNova-Reg-webfont.svg#proxima_nova_rgregular') format('svg'); */
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
 	font-family: 'Gotham Medium';
 	src: url('Gotham-Medium.otf');
 	/* src: url('ProximaNova-Reg-webfont.eot?#iefix') format('embedded-opentype'),
