--- a/ui/css/evothings-app.css
+++ b/ui/css/evothings-app.css
@@ -3,7 +3,7 @@
 @import '../fonts/Gotham.css';
 @import '../fonts/Roboto.css';
 @import '../css/feedback.css';
-@import '../css/feedback.css';
+@import '../css/quiz.css';
 
 :root {
 	--redorange: #DB5A4A;
