--- a/ui/css/evothings-app.css
+++ b/ui/css/evothings-app.css
@@ -441,8 +441,8 @@ button {
 	text-align: center;
 	float:left;
 }
-.route-inf-extra p + p{
-	color: #DB5A4A !important;
+#route-inf .route-inf-extra p + p{
+	margin-top: 5%;
 }
 
 #route-gallery {
@@ -459,22 +459,22 @@ button {
 }
 
 #goto {
-	background-color: #fff;
-	border-radius: 100%;
-	padding: 18% 0 10% 0;
+    background-color: #fff;
+    border-radius: 100%;
+    padding: 10% 0 0% 0;
+    width: 70%;
+    margin: auto;
 }
-
 #goto p {
-	width: 100%;
-	color: #000;
-	text-align: center;
-	text-transform: uppercase;
-	font-weight: 1000;
-	font-size: .6em;
+    width: 100%;
+    color: #000;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: bold;
 }
 
 .xl {
-	font-size: 2.5em !important;
+	font-size: 2em !important;
 }
 
 /*  ----------------------------------------------------------
