Generator css pt2

--- a/ui/css/generator.css
+++ b/ui/css/generator.css
@@ -15,12 +15,9 @@
 
 #answer{
     display: flex;
+    flex-wrap: wrap;
 }
 
-#answers img{
+.imganswer{
     width: 45%;
-}
-
-.answer{
-    width: 40%;
 }
