--- a/ui/css/evothings-app.css
+++ b/ui/css/evothings-app.css
@@ -93,6 +93,14 @@ section::after {
 .btn p {
 	margin: auto;
 }
+.readmore {
+	background-color: transparent;
+	text-align: left;
+	padding: 0px;
+}
+
+
+
 
 a {
 	text-decoration: none;
@@ -309,14 +317,11 @@ h1 span {
 
 .bold-upper {
 	font-weight: 1000;
-	font-size: 1.2em;
-}
-.route-instructions {
-
+	font-size: 0.8em;
 }
 .light-upper {
 	font-family: 'Gotham Light';
-	font-size: 0.8em;
+	font-size: 0.5em !important;
 }
 
 h2 {
@@ -355,9 +360,9 @@ p {
 	max-height: 125px;
 }
 
-#generate-route{
+/* #generate-route{
 	margin-top: 15%;
-}
+} */
 
 #generate-route img {
 	width: 40%;
@@ -506,12 +511,6 @@ button {
 
 ul li {
 	list-style: none;
-}
-#klein {
-	font-size: 0.6em;
-}
-#groot {
-	font-size: 0.9em;
 }
 #route-instructions img {
 	width: 100%;
