--- a/ui/css/generator.css
+++ b/ui/css/generator.css
@@ -1,15 +1,24 @@
+.white-bg{
+    background-color: #fff !important;
+}
+
+.generator .bold-upper, .generator .light-upper, .generator h2{
+    color: #000;
+}
+
 .question input {
-    background-color: #fff;
+    background-color: #000;
     font-family: 'Gotham Medium', sans-serif;
     font-weight: normal;
     padding: 10px;
     border: none;
-    color: #000;
+    color: #fff;
+    margin-bottom: 10px;
 }
 
 .question h2{
     font-size: 0.6em;
-    margin-bottom: 10px;
+    margin: 30px 0 10px 0;
 }
 
 .question .btn {
@@ -21,17 +30,31 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    margin-top: 30px;
+}
+
+#answers .answer{
+    color: #000;
+}
+
+.textanswer{
+    border: 1px solid #000;
+    margin-top: 5%;
+    padding: 30% 5% 0 5%;
 }
 
 .imganswer, .answer{
-    width: 45%;
-    height: 100px;
+    width: 48%;
+    height: 175px;
     overflow: hidden;
     text-align: center;
     font-size: 0.6em;
 }
 
+.imganswer{
+    object-fit: cover;
+    margin-top: 2.5%;
+}
+
 .imganswer img{
-    width: 100%;
+  width: 300%;
 }
