--- a/ui/css/evothings-app.css
+++ b/ui/css/evothings-app.css
@@ -4,6 +4,7 @@
 @import '../fonts/Roboto.css';
 @import '../css/feedback.css';
 @import '../css/generator.css';
+@import '../css/loadingicon.css';
 
 :root {
 	--redorange: #DB5A4A;
@@ -99,9 +100,6 @@ section::after {
 	padding: 0px;
 }
 
-
-
-
 a {
 	text-decoration: none;
 }
@@ -135,6 +133,7 @@ header {
 	z-index: 1000;
 	background-image: url('/ui/images/Kmska_Jean_Auguste_Dominique_Ingres_\(1780-1867\)_-_Zelfportret_\(1864\)_-_28-02-2010_13-37-05.jpg');
 	background-size: cover;
+	background-color: #000;
 }
 
 header button {
@@ -152,7 +151,7 @@ button.back {
 	width: 100%;
 	left: 0;
 	margin: 0;
-	font-size:2.5rem;
+	font-size:2rem;
 	color: #fff;
 	text-align: left;
 	border: none;
