--- a/ui/css/evothings-app.css
+++ b/ui/css/evothings-app.css
@@ -155,13 +155,7 @@ header button {
 button.back {
 	width: 100%;
 	left: 0;
-<<<<<<< HEAD
-	margin: 0;
-	font-size:2rem;
-=======
-	margin: 0 0 10px 0;
 	font-size:2.5rem;
->>>>>>> 94739a79c1c0c5eb8163984f507f4175e0c0b93a
 	color: #fff;
 	text-align: left;
 	border: none;
@@ -170,6 +164,7 @@ button.back {
 	display: flex;
 	align-content: space-between;
 	text-transform: uppercase;
+	padding: 0 0 10px 0;
 }
 .generator button.back p {
 	color: black;
