--- a/ui/css/generator.css
+++ b/ui/css/generator.css
@@ -76,3 +76,17 @@
 .timeline{
     margin-top: 20px;
 }
+
+.nameShouter {
+    color: black;
+    z-index: 1;
+    background-color: rgba(255,255,255,0.7);
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding-top: 80%;
+    text-align: center;
+    font-size: 40px;
+}
