--- a/ui/css/evothings-app.css
+++ b/ui/css/evothings-app.css
@@ -536,3 +536,51 @@ ul li {
 	object-fit: cover;
 	margin-top: 10%;
 }
+#group img + img, #individual img + img{
+	display: none;
+}
+.tablettekst {
+	display: none;
+}
+@media screen and (min-width: 600px) {
+
+	#guided-tours {
+		display: none;
+	}
+	#generate-route-opt div {
+		width: 47.5%;
+		float: left;
+	}
+	#group img, #individual img {
+		display: none;
+	}
+	div#individual {
+		margin-right: 5%;
+	}
+	#group img + img, #individual img + img{
+		display: inline-block;
+	}
+	.tablettekst {
+		display: inline-block;
+		text-align: center;
+	}
+	.tablettekst .light-upper{
+		font-size: 1em !important;
+	}
+	.tablettekst .bold-upper{
+		font-size: 1.2em !important;
+	}
+	.question {
+		float: left;
+    	width: 100%;
+}
+	}
+	.question input {
+		background-color: transparent;
+		border: 1px solid black;
+		color: black;
+		border-radius: 10px;
+		width: 40%;
+		float: left;
+	}
+  }
