--- a/ui/css/evothings-app.css
+++ b/ui/css/evothings-app.css
@@ -606,7 +606,9 @@ ul li {
 	}
 	.tablettekst {
 		display: inline-block;
+		margin-top: 50%;
 		text-align: center;
+
 	}
 	.tablettekst .light-upper{
 		font-size: 1em !important;
