--- a/ui/css/timer.css
+++ b/ui/css/timer.css
@@ -1,7 +1,7 @@
 #countdown {
+    display: inline-block;
     position: relative;
     margin: auto;
-    margin-top: 100px;
     height: 40px;
     width: 40px;
     text-align: center;
@@ -39,4 +39,15 @@
     to {
       stroke-dashoffset: 113px;
     }
+  }
+
+  h2{
+      display: inline-block;
+      margin-left: 5%;
+  }
+  #countdown-number p{
+      width: 100%;
+      height: 100%;
+      color: black;
+      font-size: 0.8em;
   }
